Added some semantic changes to the html file.

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" href="./Assets/CSS/style.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <section class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card">
-        <div class="card-header">
+      <main class="card">
+        <subject class="card-header">
           <h2>Generate a Password</h2>
-        </div>
-        <div class="card-body">
+        </subject>
+        <content class="card-body">
           <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </div>
-        <div class="card-footer">
+        </content>
+        <footer class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
-        </div>
-      </div>
-    </div>
+        </footer>
+      </main>
+    </section>
     <script src="./Assets/JavaScript/script.js"></script>
   </body>
 </html>
