--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" href="./Assets/CSS/style.css" />
   </head>
   <body>
-    <section class="wrapper">
+    <main class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
-      <main class="card">
-        <subject class="card-header">
+      <section class="card">
+        <instruction class="card-header">
           <h2>Generate a Password</h2>
-        </subject>
-        <content class="card-body">
+        </instruction>
+        <display class="card-body">
           <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </content>
+        </display>
         <footer class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </footer>
-      </main>
-    </section>
+      </section>
+    </main>
     <script src="./Assets/JavaScript/script.js"></script>
   </body>
 </html>
