--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <h1>Password Generator</h1>
       </header>
       <section class="card">
-        <instruction class="card-header">
+        <label class="card-header">
           <h2>Generate a Password</h2>
-        </instruction>
-        <display class="card-body">
+        </label>
+        <output class="card-body">
           <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </display>
+        </output>
         <footer class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </footer>
