--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Password Generator</h1>
       </header>
       <section class="card">
-        <label class="card-header">
+        <section class="card-header">
           <h2>Generate a Password</h2>
-        </label>
+        </section>
         <output class="card-body">
           <textarea
             readonly
