--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <h1>Password Generator</h1>
       </header>
       <section class="card">
-        <section class="card-header">
-          <h2>Generate a Password</h2>
-        </section>
+        <h2 class="card-header">Generate a Password</h2>
         <output class="card-body">
           <textarea
             readonly
